tests/NormalTests/paczka1/fuzzy1/33897918.err
Error in line 10: M13 A96 76,9
Error in line 16: MzcZc8Jno A96 94,0
Error in line 18: MzcZc8Jno S456 76,5
Error in line 21: FKt S456 98,6
Error in line 28: FKt A507 63,12
